# GoCppLinkingLibrary

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
FractalML/: Fractal.cpp
FractalNone-ML/: ElliotWave.cpp
ML/: CMakeCache.txt  LogisiticRegression.cpp  LogisticRegression.cpp  LogisticRegression.h  MLP.cpp  XGBM.cpp
TechnicalIndicator/: BaseFunctions.cpp  BaseFunctions.h  BaseFunctions.hpp  ParameterSearching.cc  ParameterSearching.cpp  TechnicalIndicator.cc  TechnicalIndicator.cpp  TechnicalIndicator.h  TechnicalIndicator.hpp  TechnincalIndicator.hpp
test/: BTCUSDT_1D.csv  CMakeCache.txt  CMakeLists.txt  LogisticRegression.pt  Makefile  TestLogisticRegression.cpp  TestTechnicalIndicator.cpp  cmake_install.cmake  testcode1  testcode2  tt1
